--- a/style.css
+++ b/style.css
@@ -9,9 +9,16 @@ h1 {
 .sidebar-nav {
   padding: 9px 0;
   margin-left: 50px;
-  margin-top: 50px;
+  margin-top: 105px;
 }
 
+.sidebar-nav label{
+  font-weight: normal;
+}
+
+.sidebar-nav .nav-header{
+  font-weight: bold;
+}
 @media (max-width: 980px) {
   /* Enable use of floated navbar text */
   .navbar-text.pull-right {
@@ -20,108 +27,3 @@ h1 {
     padding-right: 5px;
   }
 }
-
-/*h2 {
-  margin-top: 2em;
-}
-
-h1, h2 {
-  text-rendering: optimizeLegibility;
-}
-
-h2 a {
-  color: #ccc;
-  left: -20px;
-  position: absolute;
-  width: 740px;
-}
-
-.date {
-  color: #aaa;
-  margin-left: 1em;
-}
-
-footer {
-  margin-top: 8em;
-}
-
-aside {
-  font-size: small;
-  left: 780px;
-  position: absolute;
-  text-align: right;
-  width: 180px;
-}
-
-p {
-  line-height: 1.5em;
-  width: 720px;
-}
-
-blockquote {
-  width: 640px;
-}
-
-li {
-  width: 680px;
-}
-
-a {
-  color: steelblue;
-}
-
-a:not(:hover) {
-  text-decoration: none;
-}
-
-pre, code, textarea {
-  font-family: "Menlo", monospace;
-  line-height: normal;
-}
-
-textarea {
-  font-size: 100%;
-}
-
-pre {
-  border-left: solid 2px #ccc;
-  padding-left: 18px;
-  margin: 2em 0 2em -20px;
-  width: 960px;
-  overflow-x: auto;
-}
-
-.html .value,
-.javascript .string,
-.javascript .regexp {
-  color: #756bb1;
-}
-
-.html .tag,
-.css .tag,
-.javascript .keyword {
-  color: #3182bd;
-}
-
-aside,
-.comment {
-  color: #636363;
-}
-
-.html .doctype,
-.javascript .number {
-  color: #31a354;
-}
-
-.html .attribute,
-.css .attribute,
-.javascript .class,
-.javascript .special {
-  color: #e6550d;
-}
-
-iframe {
-  width: 960px;
-  height: 500px;
-  border: 1px solid #DEDEDE;
-}*/
