--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 h1 {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 64px;
@@ -7,9 +6,8 @@ h1 {
 }
 
 .sidebar-nav {
-  padding: 9px 0;
-  margin-left: 50px;
-  margin-top: 105px;
+  margin-left:100px;
+  margin-top: 115px;
 }
 
 .sidebar-nav label{
@@ -27,3 +25,7 @@ h1 {
     padding-right: 5px;
   }
 }
+
+#main{
+/*  margin-left: 80px;
+*/}
