--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1 {
 .sidebar-nav .nav-header{
   font-weight: bold;
 }
+
 @media (max-width: 980px) {
   /* Enable use of floated navbar text */
   .navbar-text.pull-right {
@@ -24,4 +25,9 @@ h1 {
     padding-left: 5px;
     padding-right: 5px;
   }
+}
+
+
+#data{
+  width: 100%; 
 }
