--- a/style.css
+++ b/style.css
@@ -7,6 +7,31 @@ h1 {
   color: black;
 }
 
-a{
-	text-decoration:none;
+#yuni{
+	width:360px;
+	margin-left:100px;
+	margin-top:100px;
+}
+
+.main{
+	margin-top:100px;
+}
+
+.main li a{
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 64px;
+  font-weight: 300;
+  letter-spacing: -2px;
+  line-height: 90%;
+  color: black;	
+  text-decoration:none;
+}
+
+.main ul{
+	list-style: none;
+	margin-left:-60px;
+}
+
+#menu{
+	visibility: hidden;
 }
